--- a/index.html
+++ b/index.html
@@ -37,12 +37,120 @@
         <div class="section-three">
             <div class="sub-3">
             <div class="name-two">Home</div>
-            <div class="name-two">About <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
-            <div class="name-two">Activities <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
-            <div class="name-two">Services <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
-            <div class="name-two">Programmes <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
-            <div class="name-two">Resources <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
-            <div class="name-two">Engage with us <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div></div>
+            <div class="name-two">About 
+                <div class="list" id="About-list">
+                    <a href=""></a>
+                    <ul>
+                        <li>Profile</li>
+                        <li>Vision-mission-objectives</li>
+                        <li>Citizen charter</li>
+                        <li>Organisational structure</li>
+                        <li>DoS centers/units/enterprises</li>
+                        <li>Secretary,Dos/chairman,ISRO</li>
+                        <li>Former secretaries/chairman</li>
+                        <li>Space commission</li>
+                        <li>Autonomous bodies</li>
+                        <li>Genesis</li>
+                        <li>Timeline</li>
+                        <li>Who's who</li>
+                        <li>Contact us</li>
+                    </ul>
+                </div>
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
+            <div class="name-two">Activities 
+            <div class="list-two" id="Activities-list">
+                <ul>
+                <li>Mission Accomplished</li>
+                <li>Future missions</li>
+                <li>science</li>
+                <li>Launchers</li>
+                <li>satellites</li>
+                <li>Space Applications</li>
+                <li>Research & Developments</li>
+                <li>Gaganyaan</li>
+                <li>Ground segment activities</li>
+                <li>Promotion & Authorisation</li>
+                <li>International co-operation</li>
+                <li>Capacity building</li>
+                <li>Training</li>
+                <li>Outreach</li>
+                </ul>
+            </div>
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
+            <div class="name-two">Services 
+                <!-- <div class="list" id="services-list">
+                <ul>
+                    <li>Launch service</li>
+                    <li>Satellite: system,bus,sub-system,testing</li>
+                    <li>Mission support</li>
+                    <li>Ground systems support</li>
+                    <li>satellite communication & Lease of transponders</li>
+                    <li>space based Earth observation: Bhuvan & Bhoonidhi</li>
+                    <li>Satellite Navigation services</li>
+                    <li>Meterological & oceanographic Satellite Data</li>
+                    <li>Disaster Management:National & international</li>
+                    <li>Aerial Services & Digital Mapping</li>
+                    <li>North-East india region specific applications services</li>
+                    <li>VEDAS services</li>
+                    <li>Transfer Orbit service</li>
+                    <li>satellite aided search & rescue</li>
+                </ul>
+                </div> -->
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
+            <div class="name-two">Programmes 
+                <!-- <div class="list" id="programmes-list">
+                <ul>
+                    <li>Academic courses</li>
+                    <li>Conference Grants</li>
+                    <li>Fellowships</li>
+                    <li>Space merchandise</li>
+                    <li>space Tutor</li>
+                    <li>space on wheels</li>
+                    <li>student satellite</li>
+                    <li>Technology Transfer</li>
+                    <li>UNNATI</li>
+                    <li>YUVIKA</li>
+                </ul>
+                </div> -->
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
+            <div class="name-two">Resources 
+                <!-- <div class="list" id="Resources-list">
+                    <ul>
+                     <li>Atlases:River basin</li>
+                     <li>Bhuvan</li>
+                     <li>Database for Emergency Management</li>
+                     <li>FEAST Tool</li>
+                     <li>I-grasp</li>
+                     <li>Info for climate & Environtmental studies</li>
+                     <li>Landslide Atlas of India</li>
+                     <li>Meteorology & oceanographic data</li>
+                     <li>Mobile Apps</li>
+                     <li>Monthly summary of DOS</li>
+                     <li>MOSDAC</li>
+                     <li>NAVIC Time</li>
+                     <li>Publications</li>
+                     <li>School Bhuvan - NCERT</li>
+                     <li>Science Data</li>
+                    </ul>
+                </div> -->
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div>
+            <div class="name-two">Engage with us 
+                <!-- <div class="list" id="Engage-list">
+                 <ul>
+                    <li>Academia</li>
+                    <li>Ask an expert</li>
+                    <li>Educators</li>
+                    <li>Industry</li>
+                    <li>Join ISRO</li>
+                    <li>Media</li>
+                    <li>Researchers</li>
+                    <li>Strart-ups</li>
+                    <li>Students</li>
+                    <li>Training</li>
+                    <li>Visitors</li>
+                 </ul>
+                </div> -->
+                <span class="down-arrow"><i class="fa-solid fa-angle-down"></i></span></div></div>
             
         <div class="sub-4">  
             <img class="imagetwo" src="/images/imagetwo.png" alt="#">
